tests/ui/rfcs/rfc-2632-const-trait-impl/tilde-const-and-const-params.stderr
error: `~const` is not allowed here
  --> $DIR/tilde-const-and-const-params.rs:25:11
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |           ^^^^^^^^^^^^
   |
note: this function is not `const`, so it cannot have `~const` trait bounds
  --> $DIR/tilde-const-and-const-params.rs:25:4
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |    ^^^

error: aborting due to previous error

